--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,7 @@
 platform = espressif32
 board = ttgo-t-watch
 framework = arduino
-lib_deps = xinyuan-lilygo/TTGO TWatch Library@^1.4.2
+lib_deps = 
+    xinyuan-lilygo/TTGO TWatch Library@^1.4.2
+    https://github.com/tierneytim/btAudio.git
 monitor_speed = 115200
